--- a/PR24BKRMKPMSJSV.ipynb
+++ b/PR24BKRMKPMSJSV.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "Pri projektu bomo analizirali oceno kakovosti življenja prebivalcev različnih držav Evropske unije. Zanima nas kateri faktorji npr. BDP na prebivalca države, kvaliteta šolskega sistema, mere neenakosti, občutek varnosti prebivalca, ure dela tedensko oz. work-life balance... najmočneje vplivajo na kakovost življenja posameznika.\r\n",
     "\r\n",
-    "Podatke bomo večinoma dobivali iz Eurostata, saj imajo veliko kvalitetnih podatkov o različnih državah Evropske unije, ki jih portal kot je OPSI nima."
+    "Podatke bomo večinoma dobivali iz Eurostata, saj imajo veliko kvalitetnih podatkov o različnih državah Evropske unije, ki jih portal kot je OPSI nim\n",
+    "\n",
+    "Začetna predpostavka: države z višjo število emigracij <==> najnižja življenska kakovost.a."
    ]
   },
   {
